<!--
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Новости Onliner.BY</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tabAuto">Автомобили</string>
    <string name="tabPeoples">Люди</string>
    <string name="tabRealt">Недвижимость</string>
    <string name="tabTechnologies">Технологии</string>
    <string name="updStatus">UPD</string>`
    <string name="footerLoading">Загрузка...</string>
    <string name="tv_unknown">Unknown</string>
    <string name="default_title"><![CDATA[<Title>]]></string>
    <string name="repeat">Повторить</string>
    <string name="comments">Высказаться</string>
    <string name="like">Лайк!</string>
    <string name="default_text"><![CDATA[<Text>]]></string>
    <string name="default_author"><![CDATA[<Author>]]></string>
    <string name="default_date"><![CDATA[<Date>]]></string>
    <string name="repeat_load_info">При загрузке данных произошла ошибка.\nПроверьте Ваше подключение к сети.</string>
    <string name="refresh">Обновить</string>
    <string name="favorites">Избранное</string>
    <string name="vote">Голосовать</string>
    <string name="top_comment">Лучший комментарий</string>
    <string name="auth">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="auth_fail_empty_password_username">Заполните данные для ввода</string>
    <string name="auth_fail_password_username">Неверные данные, проверьте и попробуйте еще раз</string>
    <string name="auth_fail_unknown">Во время авторизации произошла неизвестная ошибка, попробуйте еще раз</string>
    <string name="like_comment_error">Неизвестная ошибка, попробуйте еще раз</string>
    <string name="logout">Выйти</string>
    <string name="favorite">Избранные</string>
    <string name="string_auth">Авторизация</string>
    <string name="string_comments">Комментарии</string>
    <string name="string_favorite">Избранные</string>
    <string name="string_empty_favorite_list">Вы еще не добавили ни одной новости в избранные</string>
    <string name="string_you_comment">Ваш комментарий...</string>
    <string name="string_comment_emtry">Заполните поле</string>
    <string name="string_comment_unknown_error">При отправка комментария произошла неизвестная ошибки</string>
    <string name="label_auth_username">Логин или email...</string>
    <string name="label_auth_password">Пароль...</string>
    <string name="add_favorite_news">Новость добавлена в избранные</string>
    <string name="remove_favorite_news">Новость удалена из избранных</string>
    <string name="comment_added">Комментарий добавлен</string>
</resources>
