<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/cv_auth_block"
        android:layout_marginBottom="30dp"
        android:src="@drawable/onliner_logo"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_auth_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardElevation="5dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:id="@+id/l_auth_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/et_auth_username"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/label_auth_username" />

            <EditText
                android:id="@+id/et_auth_password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/label_auth_password" />

            <Button
                android:id="@+id/bt_auth_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/auth"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:background="@drawable/comment_button_bg"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/pb_auth_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"/>

</RelativeLayout>