<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:layout_marginTop="3dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:minWidth="70dp"
            android:background="@drawable/profile_avatar_radius"
            android:src="@drawable/i_image_default"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_comment_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/default_author"/>

            <TextView
                android:id="@+id/tv_comment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:text="@string/default_date" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/bt_like_comment"
                android:layout_centerInParent="true"
                android:layout_marginRight="8dp"
                android:paddingRight="4dp"
                android:paddingLeft="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:background="@drawable/like_value_button_bg">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:src="@drawable/i_like"
                    android:adjustViewBounds="false"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_comment_likes_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:text="0"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_like_comment"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                android:background="@drawable/like_button_bg"
                android:text="@string/like"
                tools:ignore="SmallSp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/default_text">
    </TextView>

</LinearLayout>