<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_top_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:text="@string/top_comment"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/i_image_default"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_comment_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/default_author"/>

                <TextView
                    android:id="@+id/tv_comment_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:text="@string/default_date" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false">

                <LinearLayout
                    android:id="@+id/l_like_group"
                    android:layout_width="wrap_content"
                    android:layout_height="21dip"
                    android:layout_toLeftOf="@+id/l_like_button_group"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:clipChildren="false"
                    android:background="@drawable/like_value_button_bg"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp">

                        <ImageView
                            android:id="@+id/img_like_default"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginLeft="1dp"
                            android:src="@drawable/i_default_like"
                            android:visibility="visible"
                            tools:ignore="Conte`ntDescription" />

                        <ImageView
                            android:id="@+id/img_like_best"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/i_best_like"
                            android:scaleX="2"
                            android:scaleY="2"
                            android:translationX="-3dp"
                            android:visibility="gone"
                            tools:ignore="ContentDescription" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_comment_likes_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:paddingRight="4dp"
                        android:text="10"
                        tools:ignore="SpUsage" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/l_like_button_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp">

                    <ProgressBar
                        android:id="@+id/pb_like_progress"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/bt_like_comment"
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"
                        android:background="@drawable/like_button_bg"
                        android:text="@string/like"
                        android:visibility="visible"
                        tools:ignore="SmallSp" />

                    <Button
                        android:id="@+id/bt_deslike_comment"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/ic_deslike_red"
                        android:visibility="gone"/>

                </RelativeLayout>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>
</LinearLayout>