<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="12dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/i_image_default"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_comment_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/default_author"/>

            <TextView
                android:id="@+id/tv_comment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:text="@string/default_date" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false">

            <LinearLayout
                android:id="@+id/l_like_group"
                android:layout_width="wrap_content"
                android:layout_height="21dip"
                android:layout_toLeftOf="@+id/bt_like_comment"
                android:layout_centerInParent="true"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:clipChildren="false"
                android:background="@drawable/like_value_button_bg"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp">

                    <ImageView
                        android:id="@+id/img_like_default"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginLeft="1dp"
                        android:src="@drawable/i_default_like"
                        android:visibility="visible"
                        tools:ignore="Conte`ntDescription" />

                    <ImageView
                        android:id="@+id/img_like_best"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="6dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/i_best_like"
                        android:scaleX="2"
                        android:scaleY="2"
                        android:visibility="gone"
                        tools:ignore="ContentDescription" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_comment_likes_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingRight="4dp"
                    android:text="10"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_like_comment"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                android:background="@drawable/like_button_bg"
                android:text="@string/like"
                tools:ignore="SmallSp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l_comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>